--- a/changelog_unreleased/typescript/18094.md
+++ b/changelog_unreleased/typescript/18094.md
@@ -1,37 +1,21 @@
-#### Remove extra indention in class type parameters (#18094 by @fisker)
+#### Fix the inconsistent printing between class and interface (#18094, #18091 by @fisker)
 
-<!--
-We plan to fix the inconsistent printing between class and interface, I(fisker) plan to put all changes together.
-
-This addresses the first part of #18093.
-
-We'll change this part to
-
-```
-The extra indention for type parameters in class has been removed
-```
-
-when we add more changes.
-
-TODO: Update the output for `Prettier main` in #18091
--->
+##### The extra indentation for type parameters in class has been removed
 
 <!-- prettier-ignore -->
 ```tsx
 // Input
 interface MarkDef<
   M extends string | Mark = Mark,
-  ES extends ExprRef | SignalRef = ExprRef | SignalRef
-> extends
-    A,
-    B {}
+  ES extends ExprRef | SignalRef = ExprRef | SignalRef,
+>
+  extends A, B {}
 
 declare class MarkDef<
   M extends string | Mark = Mark,
-  ES extends ExprRef | SignalRef = ExprRef | SignalRef
-> implements
-    A,
-    B {}
+  ES extends ExprRef | SignalRef = ExprRef | SignalRef,
+>
+  implements A, B {}
 
 // Prettier stable
 interface MarkDef<
@@ -50,8 +34,8 @@ declare class MarkDef<
 interface MarkDef<
   M extends string | Mark = Mark,
   ES extends ExprRef | SignalRef = ExprRef | SignalRef,
-> extends A,
-    B {}
+>
+  extends A, B {}
 
 declare class MarkDef<
   M extends string | Mark = Mark,
@@ -60,4 +44,88 @@ declare class MarkDef<
   implements A, B {}
 ```
 
-_This change also affects Flow syntax_
+##### Align interface heritages print with class
+
+<!-- prettier-ignore -->
+```tsx
+// Input
+export interface AreaConfig<ES extends ExprRef | SignalRef>
+  extends MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+export class AreaConfig<ES extends ExprRef | SignalRef>
+  implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+// Prettier stable
+export interface AreaConfig<ES extends ExprRef | SignalRef>
+  extends MarkConfig<ES>,
+    PointOverlayMixins<ES>,
+    LineOverlayMixins<ES> {}
+
+export class AreaConfig<ES extends ExprRef | SignalRef>
+  implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+// Prettier main
+export interface AreaConfig<ES extends ExprRef | SignalRef>
+  extends MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+
+export class AreaConfig<ES extends ExprRef | SignalRef>
+  implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+```
+
+##### Inconsistent opening brace print logic of class and interface body
+
+In Prettier v2.3, to improve visual separation between class head and body, [we start to print `{` of class body on a new line when the class has multiple heritages](https://prettier.io/blog/2021/05/09/2.3.0.html#improve-visual-separation-between-header-and-body-in-classes-with-multiline-headers-10085-by-sosukesuzuki).
+
+<!-- prettier-ignore -->
+```tsx
+// Prettier 2.2
+class loooooooooooooooooooong
+  extends looooooooooooooooooong
+  implements loooooooooooooooooooong {
+  property: string;
+}
+
+// Prettier 2.3
+class loooooooooooooooooooong
+  extends looooooooooooooooooong
+  implements loooooooooooooooooooong
+{
+  property: string;
+}
+```
+
+However, not everyone is happy with this change.
+
+Let us know what you think about applying this change to interfaces, please leave a comment on [this issue](https://github.com/prettier/prettier/issues/18115).
+
+If you have a better solution for this issue, we'll be happy to discuss it too.
+
+Unless a better solution comes up, we'll align the interface body print with the one for the class body in Prettier v4.
+
+<!-- prettier-ignore -->
+```tsx
+// Input
+declare class loooooooooooooooooooong
+  implements looooooooooooooooooong, loooooooooooooooooooong {
+  property: string;
+}
+
+interface loooooooooooooooooooong
+  extends looooooooooooooooooong, loooooooooooooooooooong {
+  property: string;
+}
+
+// Prettier main
+declare class loooooooooooooooooooong
+  implements looooooooooooooooooong, loooooooooooooooooooong
+{
+  property: string;
+}
+
+interface loooooooooooooooooooong
+  extends looooooooooooooooooong, loooooooooooooooooooong { // <-- This
+  property: string;
+}
+```
+
+_These changes also affect Flow syntax_
