--- a/changelog_unreleased/typescript/18118.md
+++ b/changelog_unreleased/typescript/18118.md
@@ -24,12 +24,10 @@ type B = {
 
 // Prettier stable (--no-semi, second format)
 interface A {
-  foo
-  <T>(): T
+  foo<T>(): T
 }
 type B = {
-  foo
-  <T>(): T
+  foo<T>(): T
 }
 
 // Prettier main
