--- a/changelog_unreleased/css/18114.md
+++ b/changelog_unreleased/css/18114.md
@@ -1,19 +1,22 @@
-#### Remove space around division in font attribute (#18114 by @kovsu)
+#### Remove space between font family and line height (#18114 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
 /* Input */
 a {
-  font: var(--font-size)/var(--line-height) sans-serif;
+  font: var(--size)/1;
+  font: var(--size) / 1;
 }
 
 /* Prettier stable */
 a {
-  font: var(--font-size) / var(--line-height) sans-serif;
+  font: var(--size) / 1;
+  font: var(--size) / 1;
 }
 
 /* Prettier main */
 a {
-  font: var(--font-size)/var(--line-height) sans-serif;
+  font: var(--size)/1;
+  font: var(--size) / 1;
 }
 ```
