--- a/changelog_unreleased/css/18114.md
+++ b/changelog_unreleased/css/18114.md
@@ -1,4 +1,4 @@
-#### Remove space between font family and line height (#18114 by @kovsu)
+#### Preserve spacing style between font family and line height (#18114 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
