--- a/changelog_unreleased/cli/18124.md
+++ b/changelog_unreleased/cli/18124.md
@@ -1,3 +1,3 @@
-#### Avoid creating node_modules/.cache when --cache is not enabled (#18124 by @chiawendt)
+#### Avoid creating `node_modules/.cache/` directory when `--cache` is not enabled (#18124 by @chiawendt)
 
-Running `prettier .` without `--cache` no longer creates an empty `node_modules/.cache`.
+Run `prettier .` without `--cache` no longer creates an empty `node_modules/.cache/` directory.
