--- a/changelog_unreleased/javascript/18087.md
+++ b/changelog_unreleased/javascript/18087.md
@@ -3,23 +3,38 @@
 <!-- prettier-ignore -->
 ```js
 // Input
-Foo(
+const foo = Boolean(
   a_long_long_long_long_condition ||
   a_long_long_long_long_condition ||
-  a_long_long_long_long_condition,
+  a_long_long_long_long_condition
+);
+const bar = !(
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition
 );
 
 // Prettier stable
-Foo(
+const foo = Boolean(
   a_long_long_long_long_condition ||
     a_long_long_long_long_condition ||
     a_long_long_long_long_condition,
 );
+const bar = !(
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition
+);
 
 // Prettier main
-Foo(
+const foo = Boolean(
   a_long_long_long_long_condition ||
   a_long_long_long_long_condition ||
   a_long_long_long_long_condition,
+);
+const bar = !(
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition ||
+  a_long_long_long_long_condition
 );
 ```
