--- a/changelog_unreleased/javascript/18087.md
+++ b/changelog_unreleased/javascript/18087.md
@@ -1,4 +1,6 @@
-#### Do not indent a single logical expression argument (#18087 by @kovsu)
+#### Remove indention in `Boolean()` argument (#18087 by @kovsu)
+
+Reduce diff when changing a condition to an opposite value.
 
 <!-- prettier-ignore -->
 ```js
