Update changelog and tests

--- a/changelog_unreleased/javascript/18087.md
+++ b/changelog_unreleased/javascript/18087.md
@@ -1,4 +1,4 @@
-#### Remove indention in `Boolean()` argument (#18087 by @kovsu)
+#### Remove long logical expression in `Boolean()` argument (#18087 by @kovsu)
 
 Reduce diff when changing a condition to an opposite value.
 
