--- a/changelog_unreleased/javascript/18087.md
+++ b/changelog_unreleased/javascript/18087.md
@@ -1,4 +1,4 @@
-#### Remove indention in logical expression in `Boolean()` (#18087 by @kovsu)
+#### Remove indention in logical expression in `Boolean()` call (#18087 by @kovsu)
 
 Reduce diff when changing a condition to an opposite value.
 
