--- a/changelog_unreleased/javascript/18087.md
+++ b/changelog_unreleased/javascript/18087.md
@@ -1,6 +1,6 @@
 #### Remove indention in logical expression in `Boolean()` call (#18087 by @kovsu)
 
-Reduce diff when changing a condition to an opposite value.
+Reduce diff when changing a condition to an opposite value, or change between `!!` and `Boolean()`.
 
 <!-- prettier-ignore -->
 ```js
