--- a/changelog_unreleased/javascript/18087.md
+++ b/changelog_unreleased/javascript/18087.md
@@ -6,37 +6,37 @@ Reduce diff when changing a condition to an opposite value, or change between `!
 ```js
 // Input
 const foo = Boolean(
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition
+  a_long_long_condition ||
+  a_long_long_long_condition ||
+  a_long_long_long_condition
 );
-const bar = !(
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition
+const bar = !!(
+  a_long_long_condition ||
+  a_long_long_long_condition ||
+  a_long_long_long_condition
 );
 
 // Prettier stable
 const foo = Boolean(
-  a_long_long_long_long_condition ||
-    a_long_long_long_long_condition ||
-    a_long_long_long_long_condition,
+  a_long_long_condition ||
+    a_long_long_long_condition ||
+    a_long_long_long_condition,
 );
-const bar = !(
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition
+const bar = !!(
+  a_long_long_condition ||
+  a_long_long_long_condition ||
+  a_long_long_long_condition
 );
 
 // Prettier main
 const foo = Boolean(
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition,
+  a_long_long_condition ||
+  a_long_long_long_condition ||
+  a_long_long_long_condition
 );
-const bar = !(
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition ||
-  a_long_long_long_long_condition
+const bar = !!(
+  a_long_long_condition ||
+  a_long_long_long_condition ||
+  a_long_long_long_condition
 );
 ```
