--- a/changelog_unreleased/handlebars/17781.md
+++ b/changelog_unreleased/handlebars/17781.md
@@ -1,6 +1,6 @@
-#### Added Front Matter to Handlebars (#17781 by @Codezilluh)
+#### Added Front Matter support to Handlebars (#17781 by @Codezilluh)
 
-Front matter can now be used in Handlebars code. If it is YAML front matter, it will be formatted as such.
+Front matter can now be used in Handlebars.
 
 <!-- prettier-ignore -->
 ```hbs
