--- a/changelog_unreleased/css/18114.md
+++ b/changelog_unreleased/css/18114.md
@@ -1,22 +1,19 @@
-#### Preserve spacing style between font family and line height (#18114 by @kovsu)
+#### Remove unexpected space font size and line height (#18114 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
 /* Input */
 a {
   font: var(--size)/1;
-  font: var(--size) / 1;
 }
 
 /* Prettier stable */
 a {
-  font: var(--size) / 1;
   font: var(--size) / 1;
 }
 
 /* Prettier main */
 a {
   font: var(--size)/1;
-  font: var(--size) / 1;
 }
 ```
