--- a/changelog_unreleased/css/18114.md
+++ b/changelog_unreleased/css/18114.md
@@ -1,4 +1,4 @@
-#### Remove unexpected space font size and line height (#18114 by @kovsu)
+#### Remove unexpected space between font size and line height (#18114 by @kovsu)
 
 <!-- prettier-ignore -->
 ```css
