--- a/changelog_unreleased/handlebars/18065.md
+++ b/changelog_unreleased/handlebars/18065.md
@@ -1,4 +1,4 @@
-#### Fix extra blank lines in `<style>` tags (#18065 by @kovsu)
+#### Remove extra blank lines in `<style>` tags (#18065 by @kovsu, @fisker)
 
 <!-- prettier-ignore -->
 ```hbs
