--- a/changelog_unreleased/handlebars/17856.md
+++ b/changelog_unreleased/handlebars/17856.md
@@ -2,21 +2,21 @@
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- Input --}}
+{{! Input }}
 {{#animated-if this.foo}}
 foo content
 {{else if (this.bar)}}
 bar content
 {{/animated-if}}
 
-{{!-- Prettier stable --}}
+{{! Prettier stable }}
 {{#animated-if this.foo}}
   foo content
 {{else}}{{#if (this.bar)}}
     bar content
   {{/if}}{{/animated-if}}
 
-{{!-- Prettier main --}}
+{{! Prettier main }}
 {{#animated-if this.foo}}
   foo content
 {{else if (this.bar)}}
