--- a/changelog_unreleased/handlebars/18065.md
+++ b/changelog_unreleased/handlebars/18065.md
@@ -2,14 +2,14 @@
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- Input --}}
+{{! Input }}
 <style>
   #foo {
     color: red;
   }
 </style>
 
-{{!-- Prettier stable (--html-whitespace-sensitivity=ignore) --}}
+{{! Prettier stable (--html-whitespace-sensitivity=ignore) }}
 <style>
 
   #foo {
@@ -18,7 +18,7 @@
 
 </style>
 
-{{!-- Prettier main (--html-whitespace-sensitivity=ignore)  --}}
+{{! Prettier main (--html-whitespace-sensitivity=ignore)  }}
 <style>
   #foo {
     color: red;
