--- a/changelog_unreleased/typescript/18161.md
+++ b/changelog_unreleased/typescript/18161.md
@@ -11,6 +11,6 @@
 // Prettier stable (--parser=flow)
 1 /* comment */ as const;
 
-// Prettier main (--parser=typescript)
+// Prettier main (Same output for `--parser=typescript` and `--parser=flow`)
 1 /* comment */ as const;
 ```
