--- a/changelog_unreleased/javascript/18163.md
+++ b/changelog_unreleased/javascript/18163.md
@@ -1,4 +1,4 @@
-#### Preserve parentheses for BinaryExpression with bitwise parent operators (#18163 by @fs0414)
+#### Add missing parentheses in bitwise operators (#18163 by @fs0414)
 
 <!-- prettier-ignore -->
 ```js
