Fix inconsistent formatting logic of CallExpression and NewExpression
Make CallExpression and NewExpression format consistently when they contain conditional expressions as arguments by treating NewExpression the same as CallExpression in binary expression formatting logic.

Fixes #18171

--- a/changelog_unreleased/javascript/18171.md
+++ b/changelog_unreleased/javascript/18171.md
@@ -1,63 +1,61 @@
-#### Fix inconsistent formatting logic of CallExpression and NewExpression (#18171 by @nallellasiddartha)
-
-Make `CallExpression` and `NewExpression` format consistently when they contain conditional expressions or member expressions as arguments.
+#### Fix inconsistent formatting logic of CallExpression and NewExpression (#18171 by @harshasiddartha)
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
 fn(
-  arg1,
-  arg2,
-  condition1 &&
-    condition2
-      ? value1
-      : value2
+  bifornCringerMoshedPerplexSawder,
+  askTrovenaBeenaDependsRowans,
+  glimseGlyphsHazardNoopsTieTie === averredBathersBoxroomBuggyNurl &&
+    anodyneCondosMalateOverateRetinol
+      ? annularCooeedSplicesWalksWayWay
+      : kochabCooieGameOnOboleUnweave
 );
 
 new fn(
-  arg1,
-  arg2,
-  condition1 &&
-    condition2
-      ? value1
-      : value2
+  bifornCringerMoshedPerplexSawder,
+  askTrovenaBeenaDependsRowans,
+  glimseGlyphsHazardNoopsTieTie === averredBathersBoxroomBuggyNurl &&
+    anodyneCondosMalateOverateRetinol
+      ? annularCooeedSplicesWalksWayWay
+      : kochabCooieGameOnOboleUnweave
 );
 
 // Prettier stable
 fn(
-  arg1,
-  arg2,
-  condition1 &&
-    condition2
-    ? value1
-    : value2,
+  bifornCringerMoshedPerplexSawder,
+  askTrovenaBeenaDependsRowans,
+  glimseGlyphsHazardNoopsTieTie === averredBathersBoxroomBuggyNurl &&
+    anodyneCondosMalateOverateRetinol
+    ? annularCooeedSplicesWalksWayWay
+    : kochabCooieGameOnOboleUnweave,
 );
 
 new fn(
-  arg1,
-  arg2,
-  condition1 &&
-  condition2
-    ? value1
-    : value2,
+  bifornCringerMoshedPerplexSawder,
+  askTrovenaBeenaDependsRowans,
+  glimseGlyphsHazardNoopsTieTie === averredBathersBoxroomBuggyNurl &&
+  anodyneCondosMalateOverateRetinol
+    ? annularCooeedSplicesWalksWayWay
+    : kochabCooieGameOnOboleUnweave,
 );
 
 // Prettier main
 fn(
-  arg1,
-  arg2,
-  condition1 &&
-    condition2
-    ? value1
-    : value2,
+  bifornCringerMoshedPerplexSawder,
+  askTrovenaBeenaDependsRowans,
+  glimseGlyphsHazardNoopsTieTie === averredBathersBoxroomBuggyNurl &&
+    anodyneCondosMalateOverateRetinol
+    ? annularCooeedSplicesWalksWayWay
+    : kochabCooieGameOnOboleUnweave,
 );
 
 new fn(
-  arg1,
-  arg2,
-  condition1 &&
-    condition2
-    ? value1
-    : value2,
+  bifornCringerMoshedPerplexSawder,
+  askTrovenaBeenaDependsRowans,
+  glimseGlyphsHazardNoopsTieTie === averredBathersBoxroomBuggyNurl &&
+    anodyneCondosMalateOverateRetinol
+    ? annularCooeedSplicesWalksWayWay
+    : kochabCooieGameOnOboleUnweave,
 );
 ```
