--- a/changelog_unreleased/typescript/18094.md
+++ b/changelog_unreleased/typescript/18094.md
@@ -1,4 +1,4 @@
-#### Fix the inconsistent printing between class and interface (#18094, #18091 by @fisker)
+#### Fix the inconsistent printing between class and interface (#18094, #18091, #18215 by @fisker)
 
 ##### The extra indentation for type parameters in class has been removed
 
@@ -70,6 +70,67 @@ export interface AreaConfig<ES extends ExprRef | SignalRef>
 
 export class AreaConfig<ES extends ExprRef | SignalRef>
   implements MarkConfig<ES>, PointOverlayMixins<ES>, LineOverlayMixins<ES> {}
+```
+
+##### Align single heritage print with super class
+
+<!-- prettier-ignore -->
+```tsx
+// Input
+class ExtendsLongOneWithGenerics
+  extends
+    Bar<
+      SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+      ToBreakLineToBreakLineToBreakLine,
+    > {}
+class ExtendsLongOneWithGenerics
+  implements
+    Bar<
+      SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+      ToBreakLineToBreakLineToBreakLine,
+    > {}
+interface ExtendsLongOneWithGenerics
+  extends
+    Bar<
+      SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+      ToBreakLineToBreakLineToBreakLine,
+    > {}
+
+// Prettier stable
+class ExtendsLongOneWithGenerics extends Bar<
+  SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+  ToBreakLineToBreakLineToBreakLine
+> {}
+class ExtendsLongOneWithGenerics
+  implements
+    Bar<
+      SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+      ToBreakLineToBreakLineToBreakLine
+    > {}
+interface ExtendsLongOneWithGenerics
+  extends Bar<
+    SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+    ToBreakLineToBreakLineToBreakLine
+  > {}
+
+// Prettier main
+interface Interface extends GenericEnvironment<
+  SomeType,
+  AnotherType,
+  YetAnotherType
+> {}
+class ExtendsLongOneWithGenerics extends Bar<
+  SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+  ToBreakLineToBreakLineToBreakLine
+> {}
+class ExtendsLongOneWithGenerics implements Bar<
+  SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+  ToBreakLineToBreakLineToBreakLine
+> {}
+interface ExtendsLongOneWithGenerics extends Bar<
+  SomeLongTypeSomeLongTypeSomeLongTypeSomeLongType,
+  ToBreakLineToBreakLineToBreakLine
+> {}
 ```
 
 ##### Inconsistent opening brace print logic of class and interface body
