--- a/changelog_unreleased/javascript/18243.md
+++ b/changelog_unreleased/javascript/18243.md
@@ -1,17 +1,9 @@
-#### Fix inconsistent formatting of JSX element (#18243 by @fisker)
-
-<!-- Optional description if it makes sense. -->
+#### Remove redundant parentheses around JSX element (#18243 by @fisker)
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
 new A(
-  <div>
-    <div></div>
-  </div>
-)
-
-A(
   <div>
     <div></div>
   </div>
@@ -26,20 +18,8 @@ new A(
   ),
 );
 
-A(
-  <div>
-    <div></div>
-  </div>,
-);
-
 // Prettier main
 new A(
-  <div>
-    <div></div>
-  </div>,
-);
-
-A(
   <div>
     <div></div>
   </div>,
