--- a/changelog_unreleased/css/18228.md
+++ b/changelog_unreleased/css/18228.md
@@ -2,7 +2,7 @@
 
 <!-- prettier-ignore -->
 ```css
-// Input
+/* Input */
 .foo {
   background-image:
     linear-gradient(to top, blue, red 100%),
@@ -11,7 +11,7 @@
     repeating-linear-gradient(90deg, pink, yellow 20px, green 20px, pink 40px);
 }
 
-// Prettier stable
+/* Prettier stable */
 .foo {
   background-image:
     linear-gradient(to top, blue, red 100%),
@@ -20,7 +20,7 @@
     repeating-linear-gradient(90deg, pink, yellow 20px, green 20px, pink 40px);
 }
 
-// Prettier main
+/* Prettier main */
 .foo {
   background-image:
     linear-gradient(to top, blue, red 100%),
