--- a/changelog_unreleased/typescript/17421.md
+++ b/changelog_unreleased/typescript/17421.md
@@ -14,12 +14,28 @@ To avoid such issues, Prettier now preserves the original placement of the comme
 <!-- prettier-ignore -->
 ```ts
 // Input
-const fn = (): any => /* comment */
-null;
+export const test = (): any => /* first line
+second line
+*/
+    null;
 
 // Prettier stable
-const fn = (): any /* comment */ => null
+export const test = (): any /* first line
+second line
+*/ => null;
+
+// Prettier stable (Second format)
+SyntaxError: Unexpected token (1:22)
+> 1 | export const test = (): any /* first line
+    |                      ^
+  2 | second line
+  3 | */ => null;
+  4 |
 
 // Prettier main
-const fn = (): any => /* comment */ null
+export const test = (): any =>
+  /* first line
+second line
+*/
+  null;
 ```
