--- a/changelog_unreleased/typescript/17421.md
+++ b/changelog_unreleased/typescript/17421.md
@@ -1,15 +1,4 @@
-#### Fix misplacement of comments from after an arrow to before it (#17421 by @o-m12a, @t-mangoe)
-
-Prior to this fix, formatting arrow function declarations that met all of the following conditions could result in misplaced comments:
-
-- The comment appears immediately after the arrow (=>).
-- There is a line break following the comment.
-- The function declaration includes a return type annotation.
-
-In such cases, Prettier moved the comment from after the arrow to before it.
-However, placing the comment before the arrow violates syntax rules enforced by TypeScript and Babel.
-
-To avoid such issues, Prettier now preserves the original placement of the comment.
+#### Fix misplacement of comments after arrow (#17421 by @o-m12a, @t-mangoe)
 
 <!-- prettier-ignore -->
 ```ts
