Add test and changelog

--- a/changelog_unreleased/angular/17722.md
+++ b/changelog_unreleased/angular/17722.md
@@ -1,19 +1,21 @@
-#### Support Angular 20.1 (#17722 by @fisker)
+#### Support Angular 21 (#17722, #18294 by @fisker)
 
 Angular 20.1 added support for new assignment operators.
+Angular 21 added support for regular expression.
 
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
 <b (click)="
-  a   ??= b"></b>
+  a   ??= b">{{  /\d+/g}}</b>
 
 <!-- Prettier stable -->
 <b
   (click)="
   a   ??= b"
-></b>
+  >{{  /\d+/g}}</b
+>
 
 <!-- Prettier main -->
-<b (click)="a ??= b"></b>
+<b (click)="a ??= b">{{ /\d+/g }}</b>
 ```
