--- a/changelog_unreleased/typescript/18094.md
+++ b/changelog_unreleased/typescript/18094.md
@@ -1,4 +1,7 @@
-#### Fix the inconsistent printing between class and interface (#18094, #18091, #18215 by @fisker)
+#### [HIGHLIGHT] Fix the inconsistent printing between class and interface (#18094, #18091, #18215 by @fisker)
+
+In this release, we've focused heavily on improving consistency between Class and Interface formatting. Previously, these two similar constructs were printed quite differently, leading to visual inconsistencies. We've aligned their formatting rules to provide a more predictable and cleaner output.
+
 
 ##### The extra indentation for type parameters in class has been removed
 
