--- a/website/blog/2025-11-26-3.7.0.md
+++ b/website/blog/2025-11-26-3.7.0.md
@@ -3,7 +3,7 @@ authors: "fisker"
 title: "Prettier 3.7: Improved formatting consistency and new plugin features!"
 ---
 
-We are excited to announce Prettier 3.7! This release focuses on polishing the TypeScript and Flow experience, specifically by aligning the formatting of classes and interfaces to be more consistent and predictable. We also want your opinion on the upcoming change to ifx [inconsistent opening brace print logic of class and interface body](https://github.com/prettier/prettier/issues/18115).
+We are excited to announce Prettier 3.7! This release focuses on polishing the TypeScript and Flow experience, specifically by aligning the formatting of classes and interfaces to be more consistent and predictable. We also want your opinion on the upcoming change to fix [inconsistent opening brace print logic of class and interface body](https://github.com/prettier/prettier/issues/18115).
 
 Additionally, we also fixed lots of bugs, added support for new features in Angular 21 and Graphql 16.12, added Front Matter support to Handlebars.
 
@@ -942,7 +942,7 @@ interface A {
   a: // Comment
     B;
   b: // Comment
-  	| Fooo1000
+    | Fooo1000
     | Baz2000
     | BarLoooooooooooooooooooooooooooooooooooooooooooooooooLong;
   c: // Comment
