--- a/website/blog/2025-11-26-3.7.0.md
+++ b/website/blog/2025-11-26-3.7.0.md
@@ -767,6 +767,43 @@ a = new (
 )();
 ```
 
+#### Remove empty line in for statement without "update" ([#18300](https://github.com/prettier/prettier/pull/18300) by [@fisker](https://github.com/fisker)) {#change-18300}
+
+<!-- prettier-ignore -->
+```jsx
+// Input
+for ( let i = 0, j = 0, len = allMatches.length, lenJ = selections.length;i < len;) {}
+
+// Prettier 3.6
+for (
+  let i = 0, j = 0, len = allMatches.length, lenJ = selections.length;
+  i < len;
+
+) {}
+
+// Prettier 3.7
+for (
+  let i = 0, j = 0, len = allMatches.length, lenJ = selections.length;
+  i < len;
+) {}
+```
+
+#### Improve super class format ([#18325](https://github.com/prettier/prettier/pull/18325) by [@fisker](https://github.com/fisker)) {#change-18325}
+
+<!-- prettier-ignore -->
+```jsx
+// Input
+class EnsureNoDisposablesAreLeakedInTestSuiteSuite extends eslint.Rule.RuleModule {};
+
+// Prettier 3.6
+class EnsureNoDisposablesAreLeakedInTestSuiteSuite extends eslint.Rule
+  .RuleModule {}
+
+// Prettier 3.7
+class EnsureNoDisposablesAreLeakedInTestSuiteSuite
+  extends eslint.Rule.RuleModule {}
+```
+
 ### TypeScript
 
 #### Fix misplacement of comments after arrow ([#17421](https://github.com/prettier/prettier/pull/17421) by [@o-m12a](https://github.com/o-m12a), [@t-mangoe](https://github.com/t-mangoe)) {#change-17421}
