--- a/changelog_unreleased/yaml/18324.md
+++ b/changelog_unreleased/yaml/18324.md
@@ -1,21 +1,16 @@
-#### Preserve middle comment in flow mapping (#18324 by @kovsu)
+#### Use explicit key style for flow-mapping keys with trailing comments (#18324 by @kovsu)
 
 <!-- prettier-ignore -->
 ```yaml
 # Input
----
 {"foo": #comment
 bar}
 
 # Prettier stable
----
 { "foo": bar } #comment
 
 # Prettier main
----
-{
-  "foo": #comment
-    bar,
-}
+{ ? "foo" # comment
+  : bar }
 
 ```
