Update changelog entry for issue #18324

--- a/changelog_unreleased/yaml/18324.md
+++ b/changelog_unreleased/yaml/18324.md
@@ -1,4 +1,4 @@
-#### Use explicit key style for flow-mapping keys with trailing comments (#18324 by @kovsu)
+#### Use explicit key style for flow-mapping keys with trailing comments (#18324 by @kovsu, @fisker)
 
 <!-- prettier-ignore -->
 ```yaml
@@ -12,5 +12,4 @@ bar}
 # Prettier main
 { ? "foo" # comment
   : bar }
-
 ```
