--- a/changelog_unreleased/yaml/18324.md
+++ b/changelog_unreleased/yaml/18324.md
@@ -3,11 +3,11 @@
 <!-- prettier-ignore -->
 ```yaml
 # Input
-{"foo": #comment
-bar}
+{ "foo" # comment
+  :bar }
 
 # Prettier stable
-{ "foo": bar } #comment
+{ "foo": bar } # comment
 
 # Prettier main
 { ? "foo" # comment
