docs: use correct tense in v3.7 blog post

--- a/website/blog/2025-11-27-3.7.0.md
+++ b/website/blog/2025-11-27-3.7.0.md
@@ -151,7 +151,7 @@ interface ExtendsLongOneWithGenerics extends Bar<
 
 ##### Inconsistent opening brace print logic of class and interface body
 
-In Prettier v2.3, to improve visual separation between class head and body, [we start to print `{` of class body on a new line when the class has multiple heritages](https://prettier.io/blog/2021/05/09/2.3.0.html#improve-visual-separation-between-header-and-body-in-classes-with-multiline-headers-10085-by-sosukesuzuki).
+In Prettier v2.3, to improve visual separation between class head and body, [we started to print `{` of class body on a new line when the class has multiple heritages](https://prettier.io/blog/2021/05/09/2.3.0.html#improve-visual-separation-between-header-and-body-in-classes-with-multiline-headers-10085-by-sosukesuzuki).
 
 <!-- prettier-ignore -->
 ```tsx
