--- a/website/blog/2025-11-27-3.7.0.md
+++ b/website/blog/2025-11-27-3.7.0.md
@@ -173,11 +173,11 @@ class loooooooooooooooooooong
 
 However, not everyone is happy with this change.
 
-Let us know what you think about applying this change to interfaces, please leave a comment on [this issue](https://github.com/prettier/prettier/issues/18115).
+Let us know what you think about applying this change to interfaces by leaving a comment on [this issue](https://github.com/prettier/prettier/issues/18115).
 
 If you have a better solution for this issue, we'll be happy to discuss it too.
 
-Unless a better solution comes up, we'll align the interface body print with the one for the class body in Prettier v4.
+Unless a better solution comes along, we'll align the interface body print with the one for the class body in Prettier v4.
 
 <!-- prettier-ignore -->
 ```tsx
