docs: and even more...

--- a/website/blog/2025-11-27-3.7.0.md
+++ b/website/blog/2025-11-27-3.7.0.md
@@ -1894,16 +1894,16 @@ export const print = (path, options, print) => {
 
 #### Add support for `plugin.printer.printPrettierIgnored()` ([#18070](https://github.com/prettier/prettier/pull/18070) by [@fisker](https://github.com/fisker)) {#change-18070}
 
-For a node with `prettier-ignore` comment, Prettier prints the text of the node directly. However, this may cause problems, for example, the node needs to be parenthesized or needs to print a leading semicolon to prevent ASI issue in `--no-semi` mode.
+For a node with `prettier-ignore` comment, Prettier prints the text of the node directly. However, this may cause problems, for example, if the node needs to be parenthesized or needs to print a leading semicolon to prevent ASI issue in `--no-semi` mode.
 
-Since Prettier 3.7, plugins can add `printPrettierIgnored()` function to the printer to customize the `prettier-ignore`d node print process. This function uses the extract same signature as [`plugin.printer.print()`](https://prettier.io/docs/plugins#print)
+Since Prettier 3.7, plugins can add the `printPrettierIgnored()` function to the printer to customize the `prettier-ignore`d node print process. This function uses the extract same signature as [`plugin.printer.print()`](https://prettier.io/docs/plugins#print)
 
 #### Allow plugin to provide an `estree` printer ([#18072](https://github.com/prettier/prettier/pull/18072) by [@fisker](https://github.com/fisker)) {#change-18072}
 
-Previously, if a plugin wanted to make a plugin with `estree` printer that outputs different code based on the built-in one, plugin need provide both `parsers` and `printers`. Prettier 3.7 allows a plugin to create a plugin that only provides `estree` printer.
+Previously, if a plugin wanted to make a plugin with the `estree` printer that outputs different code based on the built-in one, the plugin needed to provide both `parsers` and `printers`. Prettier 3.7 allows a plugin to create a plugin that only provides the `estree` printer.
 
 ### CLI
 
 #### Avoid creating `node_modules/.cache/` directory when `--cache` is not enabled ([#18124](https://github.com/prettier/prettier/pull/18124) by [@chiawendt](https://github.com/chiawendt)) {#change-18124}
 
-Run `prettier .` without `--cache` no longer creates an empty `node_modules/.cache/` directory.
+Running `prettier .` without `--cache` no longer creates an empty `node_modules/.cache/` directory.
