Use correct tense in v3.7 blog post (#18346)
Co-authored-by: fisker Cheung <lionkay@gmail.com>

--- a/website/blog/2025-11-27-3.7.0.md
+++ b/website/blog/2025-11-27-3.7.0.md
@@ -151,7 +151,7 @@ interface ExtendsLongOneWithGenerics extends Bar<
 
 ##### Inconsistent opening brace print logic of class and interface body
 
-In Prettier v2.3, to improve visual separation between class head and body, [we start to print `{` of class body on a new line when the class has multiple heritages](https://prettier.io/blog/2021/05/09/2.3.0.html#improve-visual-separation-between-header-and-body-in-classes-with-multiline-headers-10085-by-sosukesuzuki).
+In Prettier v2.3, to improve visual separation between class head and body, [we started to print the opening `{` of the class body on a new line when the class has multiple heritages](https://prettier.io/blog/2021/05/09/2.3.0.html#improve-visual-separation-between-header-and-body-in-classes-with-multiline-headers-10085-by-sosukesuzuki).
 
 <!-- prettier-ignore -->
 ```tsx
@@ -173,11 +173,11 @@ class loooooooooooooooooooong
 
 However, not everyone is happy with this change.
 
-Let us know what you think about applying this change to interfaces, please leave a comment on [this issue](https://github.com/prettier/prettier/issues/18115).
+Let us know what you think about applying this change to interfaces by leaving a comment on [this issue](https://github.com/prettier/prettier/issues/18115).
 
 If you have a better solution for this issue, we'll be happy to discuss it too.
 
-Unless a better solution comes up, we'll align the interface body print with the one for the class body in Prettier v4.
+Unless a better solution comes along, we'll align the interface body print with the one for the class body in Prettier v4.
 
 <!-- prettier-ignore -->
 ```tsx
@@ -1894,16 +1894,16 @@ export const print = (path, options, print) => {
 
 #### Add support for `plugin.printer.printPrettierIgnored()` ([#18070](https://github.com/prettier/prettier/pull/18070) by [@fisker](https://github.com/fisker)) {#change-18070}
 
-For a node with `prettier-ignore` comment, Prettier prints the text of the node directly. However, this may cause problems, for example, the node needs to be parenthesized or needs to print a leading semicolon to prevent ASI issue in `--no-semi` mode.
+For a node with `prettier-ignore` comment, Prettier prints the text of the node directly. However, this may cause problems, for example, if the node needs to be parenthesized or needs to print a leading semicolon to prevent ASI issue in `--no-semi` mode.
 
-Since Prettier 3.7, plugins can add `printPrettierIgnored()` function to the printer to customize the `prettier-ignore`d node print process. This function uses the extract same signature as [`plugin.printer.print()`](https://prettier.io/docs/plugins#print)
+Since Prettier 3.7, plugins can add a `printPrettierIgnored()` function to the printer to customize the `prettier-ignore`d node print process. This function uses the extract same signature as [`plugin.printer.print()`](https://prettier.io/docs/plugins#print)
 
 #### Allow plugin to provide an `estree` printer ([#18072](https://github.com/prettier/prettier/pull/18072) by [@fisker](https://github.com/fisker)) {#change-18072}
 
-Previously, if a plugin wanted to make a plugin with `estree` printer that outputs different code based on the built-in one, plugin need provide both `parsers` and `printers`. Prettier 3.7 allows a plugin to create a plugin that only provides `estree` printer.
+Previously, if a plugin wanted to make a plugin with an `estree` printer that outputs different code based on the built-in one, the plugin needed to provide both `parsers` and `printers`. Prettier 3.7 allows a plugin to create a plugin that only provides an `estree` printer.
 
 ### CLI
 
 #### Avoid creating `node_modules/.cache/` directory when `--cache` is not enabled ([#18124](https://github.com/prettier/prettier/pull/18124) by [@chiawendt](https://github.com/chiawendt)) {#change-18124}
 
-Run `prettier .` without `--cache` no longer creates an empty `node_modules/.cache/` directory.
+Running `prettier .` without `--cache` no longer creates an empty `node_modules/.cache/` directory.
