--- a/changelog_unreleased/api/18375.md
+++ b/changelog_unreleased/api/18375.md
@@ -1,3 +1,3 @@
 #### Fix `prettier.getFileInfo()` change that breaks VSCode extension (#18375 by @fisker)
 
-An internal refactor accidentally break the VSCode extension plugin loading.
+An internal refactor accidentally broke the VSCode extension plugin loading.
