Add 2nd changelog

--- a/changelog_unreleased/javascript/18380.md
+++ b/changelog_unreleased/javascript/18380.md
@@ -3,7 +3,7 @@
 <!-- prettier-ignore -->
 ```jsx
 // Input
-notHtml = /* Comment */ `
+string = /* Comment */ `
   <div>${long_cond && long_cond && long_cond && long_cond && long_cond ? "content" : ""}</div>
 `;
 html = /* HTML */ `
@@ -11,7 +11,7 @@ html = /* HTML */ `
 `;
 
 // Prettier stable
-notHtml = /* Comment */ `
+string = /* Comment */ `
   <div>${long_cond && long_cond && long_cond && long_cond && long_cond ? "content" : ""}</div>
 `;
 html = /* HTML */ `
@@ -23,7 +23,7 @@ html = /* HTML */ `
 `;
 
 // Prettier main
-notHtml = /* Comment */ `
+string = /* Comment */ `
   <div>${long_cond && long_cond && long_cond && long_cond && long_cond ? "content" : ""}</div>
 `;
 html = /* HTML */ `
