--- a/changelog_unreleased/lwc/18383.md
+++ b/changelog_unreleased/lwc/18383.md
@@ -1,14 +1,13 @@
-#### Fix lwc quotes staying when `embeddedLanguageFormatting` is `off` in attribute values (#18383 by @kovsu)
+#### Avoid quote around interpolations (#18383 by @kovsu)
 
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
-<div double-quoted="{data}"    single-quoted='{data}'
-unquoted={data}>   </div>
+<div foo={bar}>   </div>
 
-<!-- Prettier stable -->
-<div double-quoted="{data}" single-quoted="{data}" unquoted="{data}"></div>
+<!-- Prettier stable (--embedded-language-formatting off) -->
+<div foo="{bar}"></div>
 
-<!-- Prettier main -->
-<div double-quoted="{data}" single-quoted="{data}" unquoted={data}></div>
+<!-- Prettier main (--embedded-language-formatting off) -->
+<div foo={bar}></div>
 ```
