--- a/changelog_unreleased/javascript/18397.md
+++ b/changelog_unreleased/javascript/18397.md
@@ -3,11 +3,11 @@
 <!-- prettier-ignore -->
 ```jsx
 // Input
-const a = !(x + y /* foo */);
+const a = !(x || y /* foo */);
 
 // Prettier stable
-const a = !((x + y) /* foo */);
+const a = !((x || y) /* foo */);
 
 // Prettier main
-const a = !(x + y /* foo */);
+const a = !(x || y /* foo */);
 ```
