--- a/changelog_unreleased/javascript/18397.md
+++ b/changelog_unreleased/javascript/18397.md
@@ -1,13 +1,58 @@
-#### Avoid double parentheses around logical expression (#18397 by @fisker)
+#### Improve logical not expression print (#18397, #18401 by @fisker)
+
+- Fixed inner logical expression can be double parenthesized in some case.
+- Inline the expression in `if`/`while`/`do..while` condition, to reduce diff when changing condition to negated value.
 
 <!-- prettier-ignore -->
 ```jsx
 // Input
-const a = !(x || y /* foo */);
+if (!(
+  // `import("foo")`
+  node.type === "ImportExpression" ||
+  // `type foo = import("foo")`
+  node.type === "TSImportType"
+)) {
+} else if (
+  // `import("foo")`
+  node.type === "ImportExpression" ||
+  // `type foo = import("foo")`
+  node.type === "TSImportType" 
+) {
+}
 
 // Prettier stable
-const a = !((x || y) /* foo */);
+if (
+  !(
+    // `import("foo")`
+    (
+      node.type === "ImportExpression" ||
+      // `type foo = import("foo")`
+      node.type === "TSImportType"
+    )
+  )
+) {
+} else if (
+  // `import("foo")`
+  node.type === "ImportExpression" ||
+  // `type foo = import("foo")`
+  node.type === "TSImportType"
+) {
+}
 
 // Prettier main
-const a = !(x || y /* foo */);
+if (!(
+  // `import("foo")`
+  node.type === "ImportExpression" ||
+  // `type foo = import("foo")`
+  node.type === "TSImportType"
+)) {
+} else if (
+  // `import("foo")`
+  node.type === "ImportExpression" ||
+  // `type foo = import("foo")`
+  node.type === "TSImportType"
+) {
+}
 ```
+
+_The code example is [a read world case](https://github.com/prettier/prettier/blob/edb53db4b1ec326d3f0f4fb683f56c83beefeba4/src/language-js/print/call-expression.js#L135-L155) right here in the Prettier codebase_
