--- a/changelog_unreleased/json/18405.md
+++ b/changelog_unreleased/json/18405.md
@@ -11,6 +11,7 @@
   1e3,
   {
     1e3: 1,
+    1e999999999999999999999999999999: 1,
     1: 1
   }
 ]
@@ -24,6 +25,7 @@
   1000,
   {
     "1000": 1,
+    "Infinity": 1,
     "1": 1
   }
 ]
@@ -37,6 +39,7 @@
   1e3,
   {
     1e3: 1,
+    1e999999999999999999999999999999: 1,
     "1": 1
   }
 ]
