--- a/changelog_unreleased/json/18405.md
+++ b/changelog_unreleased/json/18405.md
@@ -1,5 +1,7 @@
 #### Preserve number and string representation in `json-stringify` parser (#18405 by @fisker)
 
+Previously, we print numbers and strings with `JSON.stringify()`, but it loose original representation sometime. Eg: big/small numbers are wiped, special characters get unescaped. Technically it doesn't change the value, but we don't think that's something user expected. Prettier main keeps original representation for them.
+
 <!-- prettier-ignore -->
 ```jsonc
 // Input
