--- a/changelog_unreleased/javascript/18397.md
+++ b/changelog_unreleased/javascript/18397.md
@@ -55,4 +55,4 @@ if (!(
 }
 ```
 
-_Thi code example above is [a real world case](https://github.com/prettier/prettier/blob/edb53db4b1ec326d3f0f4fb683f56c83beefeba4/src/language-js/print/call-expression.js#L135-L155) right here in the Prettier codebase_
+_This code example above is [a real world case](https://github.com/prettier/prettier/blob/edb53db4b1ec326d3f0f4fb683f56c83beefeba4/src/language-js/print/call-expression.js#L135-L155) right here in the Prettier codebase_
