Update changelog for json-stringify parser changes
Clarified the explanation regarding the preservation of number and string representation in the json-stringify parser.

--- a/changelog_unreleased/json/18405.md
+++ b/changelog_unreleased/json/18405.md
@@ -1,6 +1,6 @@
 #### Preserve number and string representation in `json-stringify` parser (#18405 by @fisker)
 
-Previously, we printed numbers and strings with `JSON.stringify()`, but it loses the original representation sometimes. Eg: big/small numbers are wiped, special characters get unescaped. Technically, it doesn't change the value, but that's something the user expected and against [what we are concerned about](https://prettier.io/docs/rationale#strings). Prettier main keeps the original representation for them.
+Previously, we printed numbers and strings with `JSON.stringify()`, but it loses the original representation sometimes. Eg: super big or small numbers are wiped, special characters get unescaped. Technically, it doesn't change the value, but that's something the user expected and against [what we are concerned about](https://prettier.io/docs/rationale#strings). Prettier main keeps the original representation for them.
 
 <!-- prettier-ignore -->
 ```jsonc
