--- a/changelog_unreleased/typescript/18406.md
+++ b/changelog_unreleased/typescript/18406.md
@@ -1,11 +1,18 @@
-#### Fix formatting for `NewExpression` with type cast (#18406)
+#### Fix formatting for new expression with type cast (#18406)
 
-Previously, `NewExpression` with a type cast was formatted inconsistently compared to `CallExpression`.
+Previously, new expression with a type cast was formatted inconsistently compared to call expression.
 
 ```ts
 // Input
 new (require("./webpack/plugins/next-trace-entrypoints-plugin")
   .TraceEntryPointsPlugin as P)({
+  rootDir: dir,
+});
+
+(
+  require("./webpack/plugins/next-trace-entrypoints-plugin")
+    .TraceEntryPointsPlugin as P
+)({
   rootDir: dir,
 });
 
@@ -15,8 +22,25 @@ new (require("./webpack/plugins/next-trace-entrypoints-plugin")
   rootDir: dir,
 });
 
-// Prettier main
-new (require("./webpack/plugins/next-trace-entrypoints-plugin")
-  .TraceEntryPointsPlugin as P)({
+(
+  require("./webpack/plugins/next-trace-entrypoints-plugin")
+    .TraceEntryPointsPlugin as P
+)({
   rootDir: dir,
 });
+
+// Prettier main
+new (
+  require("./webpack/plugins/next-trace-entrypoints-plugin")
+    .TraceEntryPointsPlugin as P
+)({
+  rootDir: dir,
+});
+
+(
+  require("./webpack/plugins/next-trace-entrypoints-plugin")
+    .TraceEntryPointsPlugin as P
+)({
+  rootDir: dir,
+});
+```
