--- a/changelog_unreleased/typescript/18406.md
+++ b/changelog_unreleased/typescript/18406.md
@@ -2,6 +2,7 @@
 
 Previously, new expression with a type cast was formatted inconsistently compared to call expression.
 
+<!-- prettier-ignore -->
 ```ts
 // Input
 new (require("./webpack/plugins/next-trace-entrypoints-plugin")
