--- a/changelog_unreleased/markdown/18066.md
+++ b/changelog_unreleased/markdown/18066.md
@@ -1,4 +1,4 @@
-#### Fix endless indentation of multi-line HTML comments in lists (#18066 by @user)
+#### Fix endless indentation of multi-line HTML comments in lists (#18066 by @Adarsh-code169)
 
 Multi-line HTML comments inside list items were getting additional indentation on each format, causing them to drift further right.
 
