Use api to should differences

--- a/changelog_unreleased/yaml/18331.md
+++ b/changelog_unreleased/yaml/18331.md
@@ -1,18 +1,16 @@
-#### Remove unnecessary empty line when last line is whitespace-only (#18331 by @kovsu)
+#### Fix block value ends with whitespace (#18331 by @kovsu)
 
-<!-- prettier-ignore -->
-```yaml
-# Input
-foo: |
-  x
-   
-# Prettier stable
-foo: |
-  x
+```js
+import { inspect } from "node:util";
+import * as prettier from "prettier";
 
+const input = "foo: |\n  x\n   ";
+const output = await prettier.format(input, { parser: "yaml" });
+console.log(inspect(output));
 
-# Prettier main
-foo: |
-  x
+// Prettier stable
+//-> 'foo: |\n  x\n\n'
 
+// Prettier main
+//-> 'foo: |\n  x\n'
 ```
