--- a/changelog_unreleased/json/18405.md
+++ b/changelog_unreleased/json/18405.md
@@ -1,6 +1,6 @@
 #### Preserve number and string representation in `json-stringify` parser (#18405 by @fisker)
 
-Previous versions of Prettier `json-stringify` parser used `JSON.stringify()` to print numbers and strings. This led to the loss of the original value representation in a few rare cases. For example, extremely large or small numbers were rounded, and some special characters were unescaped. Technically, these transformations do not change how JSON values are read, but they are not something a formatter [is concerned about](https://prettier.io/docs/rationale#strings). The main branch of Prettier now keeps the original representation, even if it can be simplified.
+Previous versions of Prettier `json-stringify` parser used `JSON.stringify()` to print numbers and strings. This led to the loss of the original value representation in a few rare cases. For example, extremely large or small numbers were rounded, and some special characters were unescaped. Technically, these transformations do not change how JSON values are read, but they are not something a formatter [is concerned about](https://prettier.io/docs/rationale#strings). Prettier main now keeps the original representation, even if it can be simplified.
 
 <!-- prettier-ignore -->
 ```jsonc
