correct codeblock lang in changelog

--- a/changelog_unreleased/html/18453.md
+++ b/changelog_unreleased/html/18453.md
@@ -1,7 +1,7 @@
 #### Fix a bug around unicode in front matter (#18453 by @seiyab)
 
 <!-- prettier-ignore -->
-```jsx
+```html
 <!-- Input -->
 ---
 title: 😄
