--- a/changelog_unreleased/markdown/18473.md
+++ b/changelog_unreleased/markdown/18473.md
@@ -11,9 +11,8 @@ Setext Heading 2
 
 Multiline
 Setext
-----------------
-
-## ATX Heading 2
+Heading
+-------
 
 <!-- Prettier stable -->
 # Setext Heading 1
@@ -22,10 +21,9 @@ Setext
 
 Multiline
 Setext
+Heading
 
 ---
-
-## ATX Heading 2
 
 <!-- Prettier main -->
 Setext Heading 1
@@ -36,7 +34,6 @@ Setext Heading 2
 
 Multiline
 Setext
-----------------
-
-## ATX Heading 2
+Heading
+-------
 ```
