Update changelog entry for SCSS if-function

--- a/changelog_unreleased/scss/18471.md
+++ b/changelog_unreleased/scss/18471.md
@@ -1,4 +1,4 @@
-#### Prevent trailing comma for SCSS if-function syntax (#18471 by @kovsu)
+#### Prevent trailing comma in `if()` function (#18471 by @kovsu)
 
 <!-- prettier-ignore -->
 ```scss
