Update changelog entry for issue #18460

--- a/changelog_unreleased/javascript/18460.md
+++ b/changelog_unreleased/javascript/18460.md
@@ -1,4 +1,4 @@
-#### Preserve spaces around placeholders for template literals (#18460 by @kovsu)
+#### Remove unexpected space inserted before expression in CSS selectors (#18460 by @kovsu)
 
 <!-- prettier-ignore -->
 ```js
